--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/casadocodigo?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.show-sql=true
