--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/casadocodigo?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/casadocodigo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=gabriel-dev
 
 spring.jpa.show-sql=true
